MSIE 6: css fix for too large buttons

--- a/css/prsnl10_screen.css
+++ b/css/prsnl10_screen.css
@@ -588,7 +588,7 @@ div.dokuwiki button.button[type=image] {
 }
 * html div.dokuwiki input.button,
 * html div.dokuwiki button.button {
-    height: 35px; /* fix MSIE 6 */
+    height: 28px; /* fix MSIE 6 */
 }
 
 
